adding title for editing information

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <form class="form-information" id="form-information">
             <fieldset class="box-form">
-                <div class="title-box">حساب کاربری</div>
+                <div class="title-box" id="title-box">ایجاد حساب کاربری</div>
                 
                 <label for="firstName">نام *</label>
                 <input type="text" name="firstName" id="firstName">
